@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-19T16:23:41Z",
+  "timestamp" : "2022-09-20T01:47:49Z",
   "count_outdated" : 527,
   "uniques_outdated" : 305,
-  "count" : 559,
+  "count" : 560,
   "uniques" : 322,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
