@@ -1,3 +1,11 @@
+2022-09-20T01:47:49Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3086860933
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 305 527 / 322 559
+* notice: next accum: outdated-unq outdated-all / unq all: 305 527 / 322 560
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-09-19]
+
 2022-09-19T16:23:41Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3084001619
 * notice: last 14d: unq all: 5 32
